--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development & node server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "babel-loader": "^9.1.0",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.3",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
